# SimpleJson

./: CMakeLists.txt  CMakePresets.json  README.md
include/: JsonValue.h
src/: JsonValue.cpp  Main.cpp
